# End-to-End-AI-Engineering-Bootcamp

./: .dockerignore  .env.example  .gitignore  Dockerfile  MakeFile  docker-compose.yml  main.py  pyproject.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/api/: app.py
apps/api/src/api/agents/: retrieval_generation.py
apps/api/src/api/core/: config.py
apps/api/src/api/routes/: endpoints.py  middleware.py  models.py
apps/chatbot_ui/: Dockerfile  pyproject.toml
apps/chatbot_ui/src/chatbot_ui/: app.py
apps/chatbot_ui/src/chatbot_ui/core/: config.py
notebooks/prerequisites/: 01-llm-apis.ipynb
notebooks/week_1/: 02-RAG-preprocessing-amazon.ipynb  03-RAG-pipeline.ipynb  explore-amazon-data-set.ipynb
notebooks/week_2/: 01_Structured_Outputs_Intro.ipynb
src/: app.py
src/core/: config.py
